# decision-desk

./: Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
infra/: alerting_rules.yml  nginx.conf  prometheus.yml
infra/grafana/dashboards/: decisiondesk.json
infra/grafana/provisioning/dashboards/: dashboard.yml
scripts/: benchmark.py  cost_report.py  k6_load_test.js
src/decisiondesk/: __init__.py  main.py
src/decisiondesk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/decisiondesk/agents/: __init__.py  base.py  cost.py  critic.py  detector.py  gate.py  maintainability.py  planner.py  scalability.py  security.py  synthesizer.py
src/decisiondesk/core/: schema.py  state.py
src/decisiondesk/graph/: __init__.py  nodes.py  parallel.py  revision.py  sequential.py
tests/: test_health.py
